Fixed makefile for python

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,4 +1,4 @@
 all:
 	rm -rf build
 	mkdir -p build build/cpp build/python
-	protoc --cpp_out=./build/cpp --python_out=./build/python ./account.proto
+	protoc --cpp_out=./build/cpp --python_out=../database_server/ ./account.proto
