Finished registration system.

--- a/http_service/CMakeLists.txt
+++ b/http_service/CMakeLists.txt
@@ -18,7 +18,14 @@ set(BINARY       "acorn")
 
 # Source files to be linked with OS library parts to form bootable image
 set(SOURCES
-  service.cpp src/chan.cpp src/routes.cpp src/database.cpp src/register.cpp fs/acorn_fs.cpp ../proto/build/cpp/account.pb.cc
+  service.cpp
+  src/chan.cpp
+  src/routes.cpp
+  src/database.cpp
+  src/register.cpp
+  src/login.cpp
+  fs/acorn_fs.cpp
+  ../proto/build/cpp/account.pb.cc
   )
 
 # To add your own include paths:
